--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_AUTOMOC ON)
 find_package(Qt5Core HINTS ~/Qt/5.11.1/gcc_64/)
 find_package(Qt5Sql HINTS ~/Qt/5.11.1/gcc_64)
 
-add_executable(server main.cpp core.cpp core.h)
+add_executable(server main.cpp core.cpp core.h dbmanager.cpp dbmanager.h)
 
 # linking
 target_link_libraries(server Qt5::Core Qt5::Sql)
