TCP connections first prototype

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
-find_package(Qt5Core HINTS ~/Qt/5.11.1/gcc_64/)
+find_package(Qt5Widgets HINTS ~/Qt/5.11.1/gcc_64/)
 find_package(Qt5Sql HINTS ~/Qt/5.11.1/gcc_64)
 
-add_executable(server main.cpp core.cpp core.h dbmanager.cpp dbmanager.h)
+add_executable(server main.cpp core.cpp core.h dbmanager.cpp dbmanager.h tcpserver.cpp tcpserver.h)
 
 # linking
-target_link_libraries(server Qt5::Core Qt5::Sql)
+target_link_libraries(server Qt5::Widgets Qt5::Sql)
